Fix overflowing terminal

--- a/src/scss/components/_code.scss
+++ b/src/scss/components/_code.scss
@@ -34,7 +34,7 @@ code {
 }
 
 pre .terminal {
-	overflow: auto;
+	overflow: hidden;
 }
 
 code[class*="language-"],
